@@ -26,6 +26,9 @@ Changes after 2.6.9 release:
     - Voodoo2 model now working after some fixes and implementation of the
       CMDFIFO (using FIFO thread) and one of the bitBLT functions.
     - Added Voodoo Banshee emulation support (still under construction).
+  - Display
+    - Added basic DDC support for Cirrus and Voodoo Banshee adapters (plug&play
+      monitor "Bochs Screen").
   - USB
     - Now creating separate plugins for each USB device implementation.
   - Networking
